<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue"
    tools:context=".activity.DetailActivity">

    <ProgressBar
        android:id="@+id/pb_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_detail"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapse_tb_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@android:color/black"
            android:fitsSystemWindows="true"
            app:expandedTitleTextAppearance="@style/expandedBarTextStyle"
            app:collapsedTitleTextAppearance="@style/collapseBarTextStyle"
            app:title="Detail"
            app:titleEnabled="true"
            app:layout_collapseMode="parallax"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <ImageView
                android:contentDescription="@string/movie_poster_content"
                android:id="@+id/img_poster"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:scaleType="fitXY"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:contentDescription="@string/movie_poster_content"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:src="@drawable/bg_divider_detail"
                android:layout_gravity="bottom"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tb_detail"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/detail_scroll"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detail_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp">

            <androidx.cardview.widget.CardView
                android:layout_width="60dp"
                android:layout_height="25dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView2">

                <TextView
                    android:id="@+id/txt_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <ImageView
                android:contentDescription="@string/rating_star_content"
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_title"
                app:srcCompat="@drawable/ic_baseline_star_24" />

            <TextView
                android:id="@+id/txt_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2" />

            <TextView
                android:id="@+id/text_view_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins"
                android:text="@string/overview"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <TextView
                android:id="@+id/txt_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_overview" />

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_title">

                <TextView
                    android:id="@+id/txt_released"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:fontFamily="@font/poppins_light"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

                <ImageView
                    android:contentDescription="@string/circle_divider_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_circle_24"
                    android:layout_marginEnd="6dp"/>


                <TextView
                    android:id="@+id/txt_runtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_marginEnd="2dp"/>

                <TextView
                    android:id="@+id/txt_runtime_hours"
                    android:text="@string/runtime"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_marginEnd="2dp"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_favorite"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAlignBottom="false"
        android:layout_gravity="bottom|end"
        app:fabSize="normal"
        android:src="@drawable/ic_baseline_favorite_border_24"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/favorite" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>